<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true">
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_gravity="center_horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="edu.chapman.cpsc356.harna100.truefalse.MainActivity"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:id="@+id/ll_quiz_layout"
            android:layout_marginBottom="30dp">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="50dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_question"
                android:gravity="center"
                android:text="@string/question_placeholder"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="30dp">
                <Button
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_true"
                    android:id="@+id/btn_true"/>
                <Button
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_false"
                    android:id="@+id/btn_false"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_result"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:id="@+id/ll_restart_layout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/out_of_questions"/>
            <Button
                android:drawableLeft="@drawable/ic_autorenew_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_restart"
                android:text="@string/restart"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
